Large UI Push: - All pages refreshed with brightness and emoji background - Explore theme changed - All fonts updated to include    - inria sans    - lobster    - monoton - Messages elements, profileview, registeractivity, post adapter elements, edit chatroom, were all affected. - Bottom navigation includes new lobster font animation - Gifs swapped and changed for colors    - new gif like search gif    - explore gif changed

--- a/app/src/main/res/drawable/white_translucency_gradient_create_bottomleft.xml
+++ b/app/src/main/res/drawable/white_translucency_gradient_create_bottomleft.xml
@@ -8,5 +8,6 @@
         android:type="linear" />
 
     <corners
-        android:radius="16dp" />
+        android:bottomLeftRadius="6dp"
+    />
 </shape>
