--- a/app/src/main/res/drawable/white_translucency_gradient_create_bottomright.xml
+++ b/app/src/main/res/drawable/white_translucency_gradient_create_bottomright.xml
@@ -8,5 +8,6 @@
         android:type="linear" />
 
     <corners
-        android:radius="16dp" />
+        android:bottomRightRadius="6dp"
+    />
 </shape>
