--- a/app/src/main/res/drawable/white_translucency_gradient_createfield.xml
+++ b/app/src/main/res/drawable/white_translucency_gradient_createfield.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-
     <gradient
         android:orientation="horizontal"
         android:startColor="#FCFFFFFF"
         android:endColor="#F8FFFFFF"
         android:type="linear" />
-
     <corners
-        android:radius="16dp" />
+        android:topLeftRadius="6dp"
+        android:topRightRadius="6dp"
+      />
+
 </shape>
