--- a/app/src/main/res/drawable/white_translucency_gradient_searchtag.xml
+++ b/app/src/main/res/drawable/white_translucency_gradient_searchtag.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+       android:shape="rectangle">
 
     <gradient
         android:orientation="horizontal"
-        android:startColor="#FCFFFFFF"
-        android:endColor="#F8FFFFFF"
+        android:startColor="#FCFFC0CB" 
+        android:endColor  ="#F8FF69B4"  
         android:type="linear" />
 
     <corners
