--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -34,9 +34,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SoundPalette"
+            android:fontFamily="@font/monoton"
             android:textSize="24sp"
             android:textColor="@android:color/white"
-            android:textStyle="bold" />
+            android:textStyle=""
+
+            />
     </LinearLayout>
 
 </FrameLayout>
