--- a/app/src/main/res/layout/adapter_chatmsg_inactive.xml
+++ b/app/src/main/res/layout/adapter_chatmsg_inactive.xml
@@ -18,8 +18,11 @@
         android:padding="15dp"
         android:scaleType="centerCrop"
         android:scaleX="1.3"
+        android:alpha="0.8"
         android:scaleY="1.3"
-        android:src="@drawable/navigation_profile_24" />
+        android:src="@drawable/navigation_profile_24"
+        android:tint="@color/white"
+        />
 
     <LinearLayout
         android:layout_width="235dp"
@@ -39,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="USERNAME"
+            android:fontFamily="@font/inriasansregular"
             android:textColor="@android:color/darker_gray"
             android:textSize="8sp" />
 
@@ -47,6 +51,7 @@
             android:id="@+id/textMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/inriasansregular"
 
             android:text="This is a really long example of a message and how it would appear on the actual screen"
             android:textColor="@color/black"
