--- a/app/src/main/res/layout/adapter_posts.xml
+++ b/app/src/main/res/layout/adapter_posts.xml
@@ -35,6 +35,7 @@
                             android:gravity="left"
                             android:paddingTop="5dp"
                             android:text="\@USERNAME"
+                            android:fontFamily="@font/lobstertwoitalic"
                             android:textColor="@android:color/darker_gray"
                             android:textSize="12dp"
                             android:textStyle="bold" />
@@ -45,6 +46,7 @@
                         android:layout_height="30dp"
                         android:text="CAPTION"
                         android:textColor="#000000"
+                        android:fontFamily="@font/inriasansregular"
                         android:textSize="10dp" />
 
                         <androidx.recyclerview.widget.RecyclerView
@@ -75,6 +77,7 @@
             android:layout_height="30dp"
             android:textColor="@color/white"
             android:shadowColor="@color/black"
+            android:fontFamily="@font/inriasansregular"
             android:shadowDx="2"
             android:shadowDy="1"
             android:shadowRadius="1"
@@ -124,6 +127,7 @@
                 android:id="@+id/postLikeValue"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
+                android:fontFamily="@font/inriasansbold"
                 android:paddingTop="3dp"
                 android:layout_gravity="center"
 
@@ -156,6 +160,8 @@
                 android:id="@+id/postCommentValue"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
+                android:fontFamily="@font/inriasansbold"
+
                 android:paddingTop="3dp"
                 android:layout_gravity="center"
                 android:text="308"
