--- a/app/src/main/res/layout/adapter_search_result.xml
+++ b/app/src/main/res/layout/adapter_search_result.xml
@@ -11,6 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Username"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="12sp" />
 </LinearLayout>
