--- a/app/src/main/res/layout/adapter_search_selected.xml
+++ b/app/src/main/res/layout/adapter_search_selected.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="Username"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="12sp"
         android:layout_marginEnd="5dp" />
 
@@ -19,5 +19,7 @@
         android:id="@+id/removeIcon"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:src="@drawable/ic_close_white_24"/>
+        android:src="@drawable/ic_close_white_24"
+        android:tint="@color/black"
+        />
 </LinearLayout>
