--- a/app/src/main/res/layout/adapter_tags.xml
+++ b/app/src/main/res/layout/adapter_tags.xml
@@ -11,6 +11,7 @@
         android:layout_gravity="center"
         android:id="@+id/profile_tag"
         android:textSize="12dp"
+        android:fontFamily="@font/lobstertworegular"
         android:textColor="@color/colorBackground"
         android:text="TAGS HERE"
         android:padding="5dp"
