--- a/app/src/main/res/layout/adapter_tags_basic.xml
+++ b/app/src/main/res/layout/adapter_tags_basic.xml
@@ -12,9 +12,10 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:shadowColor="@color/black"
+        android:fontFamily="@font/lobstertwobold"
         android:textStyle="bold"
-        android:shadowDx="2"
-        android:shadowDy="1"
-        android:shadowRadius="1"
+        android:shadowDx="3"
+        android:shadowDy="3"
+        android:shadowRadius="2"
         android:textSize="@dimen/row_text"/>
 </LinearLayout>
