--- a/app/src/main/res/layout/bottom_nav_item.xml
+++ b/app/src/main/res/layout/bottom_nav_item.xml
@@ -19,5 +19,6 @@
         android:layout_height="wrap_content"
         android:text="Label"
         android:textSize="12sp"
+        android:fontFamily="@font/lobstertworegular"
         android:textColor="@android:color/darker_gray" />
 </LinearLayout>
