--- a/app/src/main/res/layout/fragment_post_create.xml
+++ b/app/src/main/res/layout/fragment_post_create.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/background_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_dark_green"
     tools:context=".Activities.Posts.CreatePostFragment">
 
+    <!-- Emoji Background Layer -->
+    <com.soundpaletteui.Views.EmojiBackgroundView
+        android:id="@+id/emojiBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <LinearLayout
+        android:id="@+id/root_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@android:color/transparent">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
         android:layout_margin="20dp"
-        android:background="@drawable/background_transparent_round1">
+        android:background="@android:color/transparent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,6 +51,7 @@
                     android:text="Caption"
                     android:textSize="14sp"
                     android:textColor="@color/white"
+                    android:fontFamily="@font/inriasansregular"
                     android:layout_gravity="start"
                     android:textStyle="bold"
                     android:paddingStart="12dp"
@@ -49,12 +62,14 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:padding="5dp"
+                    android:fontFamily="@font/inriasansregular"
                     android:paddingStart="10dp"
                     android:hint="Enter a caption"
                     android:maxLength="30"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/black"
                     android:textColorHint="#BEC0BE"
-                    android:background="@drawable/background_transparent_rec3"/>
+
+                    android:background="@drawable/white_translucency_gradient_create"/>
             </LinearLayout>
 
             <!--CHECK BOX OPTIONS -->
@@ -69,7 +84,9 @@
                     android:layout_width="100dp"
                     android:layout_height="20dp"
                     android:text="Is Mature?"
-                    android:textSize="8sp"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/inriasansregular"
                     android:textColor="@color/white"/>
 
                 <View
@@ -78,11 +95,13 @@
 
                 <CheckBox
                     android:id="@+id/isFollowing"
-                    android:layout_width="100dp"
+                    android:fontFamily="@font/inriasansregular"
+                    android:layout_width="133dp"
                     android:layout_height="20dp"
                     android:text="Followers Only?"
-                    android:textSize="8sp"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <!-- POST CONTENT -->
@@ -118,6 +137,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Post Tags"
+                    android:fontFamily="@font/inriasansregular"
                     android:textSize="14sp"
                     android:textColor="@color/white"
                     android:layout_gravity="start"
@@ -129,11 +149,12 @@
                     android:id="@+id/tagSearchInput"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:background="@drawable/background_transparent_rec3"
+                    android:background="@drawable/white_translucency_gradient_createfield"
+android:fontFamily="@font/inriasansregular"
                     android:autoSizeMaxTextSize="20dp"
                     android:hint="Enter a Tag..."
                     android:textColorHint="#BEC0BE"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:paddingStart="10dp"/>
 
 
@@ -149,7 +170,8 @@
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:padding="5dp"
-                        android:background="@drawable/background_transparent_rec3"/>
+                        android:background="@drawable/white_translucency_gradient_create_bottomleft"
+                        />
 
                     <!-- Selected Post Tags -->
                     <androidx.recyclerview.widget.RecyclerView
@@ -159,7 +181,7 @@
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:orientation="vertical"
-                        android:background="@drawable/background_transparent_rec3"/>
+                        android:background="@drawable/white_translucency_gradient_create_bottomright"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -178,6 +200,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="User Tags"
+                    android:fontFamily="@font/inriasansregular"
                     android:textSize="14sp"
                     android:textColor="@color/white"
                     android:layout_gravity="start"
@@ -189,11 +212,12 @@
                     android:id="@+id/userSearchInput"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:background="@drawable/background_transparent_rec3"
+                    android:background="@drawable/white_translucency_gradient_createfield"
+android:fontFamily="@font/inriasansregular"
                     android:autoSizeMaxTextSize="20dp"
                     android:hint="Enter a Username..."
                     android:textColorHint="#BEC0BE"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:paddingStart="10dp"/>
 
                 <LinearLayout
@@ -207,8 +231,10 @@
                         android:layout_height="70dp"
                         android:layout_width="0dp"
                         android:layout_weight="1"
+                        android:background="@drawable/white_translucency_gradient_create_bottomleft"
+
                         android:padding="5dp"
-                        android:background="@drawable/background_transparent_rec3"/>
+                        />
 
                     <!-- Selected Users to tag -->
                     <androidx.recyclerview.widget.RecyclerView
@@ -218,7 +244,8 @@
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:orientation="vertical"
-                        android:background="@drawable/background_transparent_rec3"/>
+                        android:background="@drawable/white_translucency_gradient_create_bottomright"
+                        />
                 </LinearLayout>
             </LinearLayout>
 
@@ -236,10 +263,12 @@
                     android:id="@+id/previewButton"
                     android:layout_width="90dp"
                     android:layout_height="100dp"
-                    android:text="PREVIEW"
+                    android:fontFamily="@font/inriasansbold"
+                    android:text="Preview"
                     android:background="@android:color/white"
                     android:backgroundTint="@android:color/transparent"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
+
                     android:padding="5dp" />
 
                 <View
@@ -251,10 +280,11 @@
                     android:id="@+id/postButton"
                     android:layout_width="90dp"
                     android:layout_height="100dp"
-                    android:text="POST"
+                    android:text="Post"
+                    android:fontFamily="@font/inriasansbold"
                     android:background="@android:color/white"
                     android:backgroundTint="@android:color/transparent"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
                     android:padding="5dp"/>
             </LinearLayout>
 
@@ -270,4 +300,4 @@
         </LinearLayout>
 
     </ScrollView>
-</LinearLayout>
+    </LinearLayout></FrameLayout>
