--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/background_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -30,6 +31,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="5"
+            android:fontFamily="@font/lobstertwobolditalic"
             android:layout_gravity="left"
             android:textSize="20dp"
             android:paddingTop="2dp"
@@ -51,7 +53,9 @@
                 android:id="@+id/editTagsButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fontFamily="@font/inriasansregular"
                 android:text="Edit Tags"
+                android:textStyle="bold"
                 android:textSize="7dp"></Button>
         </LinearLayout>
 
@@ -66,8 +70,10 @@
                 android:id="@+id/editSavedButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Edit Saved"
-                android:textSize="6dp"></Button>
+                android:fontFamily="@font/inriasansregular"
+                android:textStyle="bold"
+                android:text="Profile"
+                android:textSize="9dp"></Button>
         </LinearLayout>
     </LinearLayout>
 
@@ -89,7 +95,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
-                android:src="@drawable/baseline_person_100"/>
+                app:shapeAppearanceOverlay="@style/CircleImageView"
+                android:src="@drawable/baseline_person_100"
+                android:backgroundTint="@color/white"
+                />
+
 
             <ImageButton
                 android:id="@+id/editProfileButton"
@@ -114,6 +124,7 @@
                 android:layout_gravity="left"
                 android:textColor="@color/white"
                 android:shadowColor="@color/black"
+                android:fontFamily="@font/inriasansregular"
                 android:shadowDx="2"
                 android:shadowDy="1"
                 android:shadowRadius="1"
@@ -144,6 +155,7 @@
                         android:id="@+id/profileFollowersDisplay"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/inriasansregular"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:textColor="@color/white"
@@ -161,6 +173,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:fontFamily="@font/inriasansregular"
                         android:gravity="center"
                         android:textColor="@color/white"
                         android:shadowColor="@color/black"
@@ -186,6 +199,7 @@
                         android:id="@+id/profileFollowingsDisplay"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/inriasansregular"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:textColor="@color/white"
@@ -203,6 +217,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:fontFamily="@font/inriasansregular"
                         android:textColor="@color/white"
                         android:shadowColor="@color/black"
                         android:shadowDx="2"
@@ -228,6 +243,7 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:textColor="@color/white"
+            android:fontFamily="@font/inriasansregular"
             android:shadowColor="@color/black"
             android:shadowDx="2"
             android:shadowDy="1"
@@ -278,7 +294,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textColor="@android:color/white"
-                android:text="POSTS"
+                android:fontFamily="@font/lobstertworegular"
+                android:text="Posts"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </FrameLayout>
@@ -307,8 +324,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textColor="@android:color/white"
-                android:text="SAVED"
+                android:text="Saved"
                 android:textSize="18sp"
+                android:fontFamily="@font/lobstertworegular"
+
                 android:textStyle="bold" />
         </FrameLayout>
     </LinearLayout>
