--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,7 @@
         android:shadowDx="3"
         android:shadowDy="3"
         android:shadowRadius="4"
+        android:tint="@color/white"
         android:src="@drawable/baseline_music_note_48"
 
         />
@@ -60,6 +61,7 @@
         android:layout_height="154dp"
         android:layout_gravity="center"
         android:layout_weight="5"
+        android:fontFamily="@font/lobstertwobolditalic"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:paddingBottom="50dp"
@@ -126,9 +128,11 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Register"
+                android:fontFamily="@font/lobstertworegular"
+                android:textStyle="bold"
                 android:textColor="#C5B940"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="16sp"
+                />
         </FrameLayout>
 
         <FrameLayout
@@ -148,11 +152,13 @@
                 android:id="@+id/login_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/lobstertworegular"
                 android:layout_gravity="center"
                 android:text="Login"
                 android:textColor="#438092"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textSize="16sp"
+           />
         </FrameLayout>
 
     </LinearLayout>
