--- a/app/src/main/res/layout/fragment_post_create_media.xml
+++ b/app/src/main/res/layout/fragment_post_create_media.xml
@@ -8,6 +8,7 @@
     android:paddingBottom="10dp">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
