--- a/app/src/main/res/layout/fragment_post_create_text.xml
+++ b/app/src/main/res/layout/fragment_post_create_text.xml
@@ -56,7 +56,7 @@
                     android:id="@+id/fontColourDisplay"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:background="@color/white"/>
+                    android:background="@color/black"/>
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/fontColourSelector"
